--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -12,14 +12,22 @@ dl, dd, ol, ul, figure {
   margin: 0;
   padding: 0;
   color: $almost-black; 
-  line-height: 1.6em;
+  line-height: $normal-line-height;
 }
 
 p {
   color: $almost-black;
 }
 
-sup { padding: 0px 2px; margin-top: 60px !important; vertical-align: top; position: relative; top: -0.5em; }
+sup { padding: 0px 2px; margin-top: 60px !important; vertical-align: top; position: relative; top: -0.4em; }
+.footnote::before { content: '['; }
+.footnote::after { content: ']'; }
+.footnote { text-decoration: none; }
+.footnotes {
+  border-top: 1px solid $background-gray;
+  margin-top: $base-unit;
+  padding-top: $base-unit;
+}
 
 ::selection {
   background: hsla(218, 37%, 90%, 0.8); /* $lighter-blue; */
@@ -29,7 +37,7 @@ sup { padding: 0px 2px; margin-top: 60px !important; vertical-align: top; positi
 hr {
     display: block;
     text-align: left;
-    margin: 1.6em 0;
+    margin: $base-unit 0;
     border: none;
     height: 1px;
     background: $background-gray;
@@ -38,7 +46,7 @@ hr {
 h1, h2, h3, h4, h5, h6, {
   font-family: 'Cormorant Garamond';
   font-weight: 400;
-  line-height: 1.2em;
+  line-height: $base-line-height;
 }
 h1 {
     font-size: 38px;
@@ -63,7 +71,7 @@ h6 {
  * Basic styling
  */
 body {
-  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+  font: $base-font-weight #{$base-font-size}/#{$normal-line-height} $base-font-family;
   color: $almost-black;
   background-color: $background-gray;
   -webkit-text-size-adjust: 100%;
@@ -86,7 +94,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: $base-unit;
 }
 
 
@@ -127,7 +135,7 @@ figcaption {
  * Lists
  */
 ul, ol {
-  margin-left: $spacing-unit;
+  margin-left: $base-unit * 2;
 }
 
 li {
@@ -142,17 +150,17 @@ li {
  */
 blockquote {
   border-left: 4px solid $grey-color-light;
-  padding: .6em 5%;
+  padding: ($base-unit / 2) 4%;
   color: $base-gray;
-  margin: 1.6em 0;
   text-align: justify;
   word-break: break-word;
   font-size: 17px;
   background-color: $very-light-gray;
   
   > p, a {
-  font-size: 17px;
+    font-size: 17px;
     color: $base-gray;
+	transition: 0s;
   }
 
   > :last-child {
@@ -197,7 +205,7 @@ pre {
     color: $almost-black;
     background-color: #f8f8f8;
 	border-radius: 5px;
-    line-height: 1.6em;
+    line-height: $normal-line-height;
     font-family: Consolas, Monaco, Monospace, Courier;
     white-space: pre;
     -moz-tab-size: 4;
@@ -258,10 +266,7 @@ a {
  * Tables
  */
 table {
-  margin-bottom: $spacing-unit;
   width: 100%;
-  text-align: $table-text-align;
-  color: lighten($almost-black, 18%);
   border-collapse: collapse;
   border: 1px solid $grey-color-light;
   tr {
@@ -270,7 +275,7 @@ table {
     }
   }
   th, td {
-    padding: ($spacing-unit / 3) ($spacing-unit / 2);
+    padding: ($base-unit / 3) ($base-unit / 2);
   }
   th {
     background-color: lighten($grey-color-light, 3%);
