--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -6,8 +6,6 @@
 
 .page-inner-main {
   min-height: 100vh;
-  padding-top: 100px;
-  padding-bottom: 100px;
 }
 #page-inner { 
   max-width: 1200px;
@@ -16,7 +14,6 @@
   background: $white; 
   margin-right: auto; 
   margin-left: auto;
-  height:100%;
 }
 #page-inner p { 
   font-size: 19px;
@@ -30,16 +27,16 @@
     }
 	#page-inner p { font-size: 17px !important; }
     .side {
-	   padding: 0 7% 20px 7% !important; /* 40px = 5% everywhere */
+	   padding: 0 7% ($base-unit) 7% !important; /* 40px = 5% everywhere, now 7% */
 	}
 	.main {
-	   padding: 0 7% 20px 0 !important;
+	   padding: 0 7% ($base-unit) 0 !important;
 	}
 	.main-with-margin {
-	   padding: 0 7% 20px 7% !important;
+	   padding: 0 7% ($base-unit) 7% !important;
 	}
 	.only-main {
-	   margin: 0 7% 20px 7% !important;
+	   margin: 0 7% ($base-unit) 7% !important;
 	}
    .post-list li {
        padding-left: 7% !important;
@@ -98,7 +95,7 @@
 }
 #site-title, #site-under-title {
   text-align: left;
-  text-shadow: -1px 0 2px $white, 0 -1px 2px $white, 1px 0 2px $white, 0 1px 2px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white;
+  text-shadow: -1px 0 2px $white, 0 -1px 2px $white, 1px 0 2px $white, 0 1px 2px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 10px $white, 0 0 10px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white, 0 0 15px $white;
   position: absolute;
   z-index: 99;
   white-space: nowrap;
@@ -106,7 +103,7 @@
 #site-title { 
   text-decoration: none;
   margin-left: 7%;
-  margin-top: 135px;
+  margin-top: 140px;
 }
 #site-under-title { 
   margin-left: 7%;
@@ -135,7 +132,7 @@
 	opacity: .7;
     padding: 0 10px;
 	/* margin: 0 -8px; */
-    transition: .16s;
+    transition: .15s;
     text-decoration: none !important;
     text-transform: uppercase;
     /* transform: scale(.9, 1); */
@@ -157,7 +154,7 @@
   font-size: 16px;
   border-top: 1px solid $background-gray;
   background-color: $light-gray;
-  line-height: 40px;
+  line-height: $base-unit * 2;
   overflow: hidden;
   text-align: left;
   padding: 10px 7%;
@@ -207,24 +204,24 @@
 .inner-wrap-column { 
   display: flex;
   flex-wrap: wrap;
-  padding: 40px 0;
+  padding: ($base-unit * 2) 0;
 }
 .main {   
   flex: 70%;
-  padding: 20px 20px 20px 0;
+  padding: ($base-unit) ($base-unit) ($base-unit) 0;
 }
 .main-with-margin {   
   flex: 70%;
-  padding: 20px 40px 20px 100px;
+  padding: ($base-unit) ($base-unit * 2) ($base-unit) ($base-unit * 5);
 }
 .side {
   flex: 30%;
-  padding: 20px 40px;
+  padding: ($base-unit) ($base-unit * 2);
 }
 .only-main {
   flex: 100%;
-  padding: 20px 0;
-  margin: 20px 100px;
+  padding: ($base-unit) 0;
+  margin: ($base-unit) ($base-unit * 5);
   margin-top: 0;
   max-width: 800px;
   margin-left: auto;
@@ -239,7 +236,7 @@
 
 
 .post-list-heading {
-  margin-left: 100px;
+  margin-left: ($base-unit * 5);
 }
 
 .post-list {
@@ -247,10 +244,10 @@
   list-style: none;
 
   > li {
-    /* padding-top: 20px; */
-    margin-bottom: 20px;
-	padding-bottom: 20px;
-	padding-left: 100px;
+    /* padding-top: $base-unit; */
+    margin-bottom: $base-unit;
+	padding-bottom: $base-unit;
+	padding-left: ($base-unit * 5);
 	/*padding-right: 2%;
 	margin-right: -2%;*/
 	border-bottom: 1px solid $background-gray; 
@@ -278,7 +275,7 @@
 /* pagination */
 
 .pagination {
-  padding: 20px 10% 40px 15%;
+  padding: ($base-unit) 10% ($base-unit * 2) 15%;
   cursor: default;
   font-style: normal;
   line-height: 33px;
@@ -288,7 +285,7 @@
   /* box-shadow: 1px 1px $background-gray, -1px -1px $background-gray, 0 -1px $background-gray, -1px 0 $background-gray, 0 1px $background-gray, 1px 0 $background-gray, 1px -1px $background-gray, -1px 1px $background-gray; */
   text-decoration: none;
   padding: 2px 10px;
-  min-width: 40px;
+  min-width: ($base-unit * 2);
   margin: 0 -3px;
   margin-top: -1px;
   color: $link-blue;
@@ -321,17 +318,18 @@
 
 
 #archives {
-  margin: 30px 0;
+  margin: 0;
   cursor: default;
   text-transform: capitalize;
+  margin-bottom: ($base-unit * 2); 
 }
 .side-head {
   text-align: center;
-  margin: 20px 0 20px 0;
-  padding-bottom: 10px;
+  margin-bottom: ($base-unit);
+  padding-bottom: $base-unit;
   border-bottom: 1px solid $background-gray;
   font-family: 'Times New Roman', 'Noto Serif CJK JP Regular';
-  line-height: 1.6em;
+  line-height: $normal-line-height;
 }
 .side-in a {
   text-decoration: none;
@@ -391,7 +389,7 @@ span.small { font-size:14px !important; opacity:.5 !important; }
 /* tag page */
 
 .tag-title {
-  margin-top: 40px;
+  margin-top: ($base-unit * 2);
 }
 
 #tags-list, #full-cat-list {
@@ -458,14 +456,14 @@ span.small { font-size:14px !important; opacity:.5 !important; }
 
 .previous-post {
   border-bottom: 1px solid $background-gray;
-  top:-40px;
+  top: (-$base-unit * 2);
   margin-bottom: -30px;
 }
 .previous-post:hover, .previous-post:focus { /* border-bottom: 1px solid $background-gray;  */
 }
 .next-post { 
   border-top: 1px solid $background-gray;
-  bottom: -40px; 
+  bottom: (-$base-unit * 2); 
   margin-top: -30px;
 }
 .next-post a {
@@ -561,13 +559,11 @@ border-top-color: black !important;
   text-decoration: none;
   display: block;
 }
-
 .post-link a:hover {
   color: $link-blue;
 }
 .post-categories {
   cursor: default;
-  margin-bottom: -1px;
 }
 .post-categories a {
   transition: .1s;
@@ -581,22 +577,23 @@ border-top-color: black !important;
   content: ', ';
 }
 .post-title {
-  line-height: $small-line-height;
-  margin-bottom: .2em;
 }
 .main-title {
   text-align: center;
-  margin: .65em 0 1.3em 0;
-  line-height: 1.2em;
+  margin: ($base-unit) 0 ($base-unit * 2) 0;
+  line-height: $small-line-height / 1.1;
 }
 .post-content {
-  margin: 1.6em 0;
+  margin: $base-unit 0;
 }
 
-.footnotes {
-  border-top: 1px solid $background-gray;
-  margin-top: 1.6em;
-  padding-top: 1.6em;
+.post-header {
+
+  > p, h3, div {
+    margin: 0;
+    line-height: $base-line-height;
+    margin-bottom: $base-unit / 2;
+  }
 }
 
 
@@ -636,15 +633,15 @@ i.button-arrow-up {
   visibility: hidden;
   display: none;
   position: fixed;
-  bottom: 20px;
+  bottom: $base-unit;
   right: 3%;
   z-index: 9;
   font-size: 18px;
   outline: none;
   background-color: $white;
   cursor: pointer;
-  width: 60px;
-  height: 60px;
+  width: ($base-unit * 3);
+  height: ($base-unit * 3);
   border-radius: 50%;
   border: 1px solid $tag-gray;
   opacity: .4 !important;
@@ -673,7 +670,7 @@ details > summary.toc-details {
   -webkit-touch-callout: none;
   border: 1px solid $background-gray;
   border-radius: 2px 2px 0 0;
-  margin: 1.6em 0 0 0;
+  margin: ($normal-line-height) 0 0 0;
   color: $base-gray;
   white-space: nowrap;
   font-style: italic;
@@ -698,6 +695,7 @@ details #tags-list {
 @font-face {
   font-family: 'Noto Serif CJK JP Regular';
   src: url(/src/fnt/noto-cjk-jp/NotoSerifCJKjp-Regular.woff);
+  font-weight: 400;
 }
 
 @font-face {
